--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-<<<<<<< HEAD
+    "@reduxjs/toolkit": "^2.2.7",
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
-=======
-    "@reduxjs/toolkit": "^2.2.7",
->>>>>>> c8b112214bba6e3a73f8aedfedb016d75e2446dd
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
     "scss": "^0.2.4"
