--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/starter-kit": "^2.6.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "pg-promise": "^11.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
