--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg-promise": "^11.9.1",
+    "prosemirror-model": "^1.22.3",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-transform": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
